# mini-rag

./: pyproject.toml  shell.nix
src/: app.py  ui.py
